EPNG-13094 : Supporting Spring Boot 4.x.x, migrating to JUnit 5 and 6, upgrading all dependencies to latest version